no longer overlap in elements in candidate modal

--- a/4.Clients/WebApi/ClientApp/src/styles.css
+++ b/4.Clients/WebApi/ClientApp/src/styles.css
@@ -44,7 +44,7 @@ button > i {
 @media screen and (max-width: 1443px) and (min-width: 1135px){
   nz-modal > div > div.ant-modal-wrap > div.ant-modal
   {
-    width: 49vw !important;
+    width: 70vw !important;
   }
 }
 @media screen and (max-width: 1134px) and (min-width: 676px){
